Update for Java 21
- Fix some new warnings
- Removed sponge from build, as it simply isn't maintained well
  currently. May be removed entirely in the future
- Remove 1.18 support from Bukkit as it breaks under 21 for some reason
- Fix a bug in `ForwardSeekableInputStream`